[package]
name = "multicast_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1

[dependencies]
anyhow = "1.0.71"
futures = "0.3.28"
once_cell = "1.18.0"
tokio = { version = "1.28.2", features = ["macros", "net", "rt-multi-thread"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
pnet = "0.33.0"
cidr-utils = "0.5.10"
